--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -372,8 +372,8 @@ nav li a
 {
 	position: absolute;
 	display: flex;
-	width: 40vw;
-	height: 70vh;
+	width: 40%;
+    height: 70%;
 	top: 100%;
 	left: 50%;
 	border-radius: 10px;
@@ -387,6 +387,13 @@ nav li a
 	margin: auto;
 }
 
+.modal-content {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+
 .modal-title
 {
 	font-family: "Work Sans";
@@ -396,22 +403,28 @@ nav li a
 	letter-spacing: 0em;
 	text-align: center;
 	color: #000;
-	padding: 30px 0;
+	padding: 5% 0;
 }
 
-.modal-close
+.modal-close ,
+#modal2 .modal2-close
 {
 	position: absolute;
-	top: 15px;
-	right: 20px;
+	top: 3%; 
+    right: 3%; 
+	width: 36px;
+	height: 36px;
+	background-color: transparent;
+	border: none;
 	cursor: pointer;
 	font-size: 30px;
-	color: black;
 }
 
-.modal-close:hover, .modal2-back-button:hover,.modal2-close:hover
+.modal-close:hover, 
+.modal2-back-button:hover,
+.modal2-close:hover
 {
-	transform: scale(1.5);
+	transform: scale(1.3);
 	transition: transform 0.3s ease;
 }
 
@@ -420,8 +433,8 @@ nav li a
 	display: flex;
 	flex-wrap: wrap;
 	align-items: flex-start;
-	gap: 10px;
-	padding: 0;
+	gap: 12px;
+	padding: 0 5px;
 	max-height: 60vh;
 	overflow-y: auto;
 }
@@ -516,25 +529,6 @@ hr
 	cursor: pointer;
 }
 
-.modal-close:hover
-{
-	transform: scale(1.5);
-	transition: transform 0.3s ease;
-}
-
-#modal2 .modal2-close
-{
-	position: absolute;
-	top: 20px;
-	right: 10px;
-	width: 36px;
-	height: 36px;
-	background-color: transparent;
-	border: none;
-	cursor: pointer;
-	font-size: 30px;
-}
-
 #modal2 #modal2-title h2
 {
 	text-align: center;
@@ -595,11 +589,11 @@ hr
 	margin-top: 20px;
 }
 
-.champ-saisie input[type="text"],.champ-saisie select
+.champ-saisie input[type="text"],
+.champ-saisie select
 {
 	margin-top: 14px;
 	margin-bottom: 14px;
-	width: 96%;
 	font-size: 14px;
 	font-family: "Work Sans";
 	font-weight: 400;
@@ -609,9 +603,17 @@ hr
 	padding: 15px ;
 }
 
+.champ-saisie input[type="text"] {
+	width: 93.4%;
+}
+
 .champ-saisie select
 {
 	width: 100%;
+}
+
+#modal2 #file-input {
+    display: none;
 }
 
 #modal2 #modal2-button
