--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -371,8 +371,8 @@ nav li a
 {
 	position: absolute;
 	display: flex;
-	width: 30%;
-    height: 72%;
+	width: 40%;
+    height: 80%;
 	top: 100%;
 	left: 50%;
 	border-radius: 10px;
@@ -390,19 +390,18 @@ nav li a
 }
 
 .modal-content {
+	position: relative;
     display: flex;
     flex-direction: column;
     justify-content: center;
 }
-
 
 #modal1-title h2 {
 	font-weight: 400;
 	line-height: 30px;
 	letter-spacing: 0em;
 	text-align: center;
-	margin: 15px;
-	padding: 5% 0;
+	padding: 30px;
 	font-family: "Work Sans";
 	font-size: 20px;
     color: #000;
@@ -412,8 +411,8 @@ nav li a
 #modal2 .modal2-close
 {
 	position: absolute;
-	top: 3%; 
-    right: 3%; 
+	top: -3%; 
+    right: -5%; 
 	width: 36px;
 	height: 36px;
 	background-color: transparent;
@@ -476,24 +475,30 @@ hr
 {
 	width: 95%;
 	height: 1px;
-	margin-top: 60px;
+	margin-top: 40px;
 	background-color: #B3B3B3;
 	border: none;
 }
 
-#add-project-form-modal
-{
-	max-width: 100%;
-	text-align: center;
-	justify-content: center;
+#add-photo-button {
+    width: 50%;
+    max-width: 100%;
+    text-align: center;
+    border-radius: 20px;
+    background-color: #1D6154;
+    color: #FFF;
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
 }
+
 
 /* Modal 2*/
 .img-loaded-container
 {
 	display: none;
 	width: 500px;
-	height: 180px;
+	height: 150px;
 	max-width: 100%;
 }
 
@@ -506,8 +511,8 @@ hr
 #modal2 #back-to-modal1
 {
 	position: absolute;
-	top: 20px;
-	left: 20px;
+	top: -3%; 
+    left: -5%; 
 	width: 21px;
 	height: 36px;
 	color: #306685;
@@ -539,19 +544,19 @@ hr
 	background: #E8F1F6;
 	border-radius: 3px;
 	max-width: 100%;
-	height: 180px;
+	height: 150px;
 }
 
 .image-container
 {
 	max-width: 100px;
 	margin-bottom: 10px;
-	margin-left: 50px;
+	margin-left: 40px;
 }
 
 #modal2-photo-add-button {
-	width: 173px;
-    height: 36px;
+	width: 100%;
+    height: 25%;
     font-size: 14px;
     font-weight: 550;
     font-family: "Work Sans";
@@ -569,7 +574,34 @@ hr
 	margin-bottom: 10px;
 	font-size: 10px;
 	color: #444444;
+	margin-left: 40px;
 }
+
+
+/** Catégorie section **/
+.categorie-section
+{
+	position: relative;
+	height: auto;
+}
+
+.categorie-section label
+{
+	margin-left: 5px;
+}
+
+.titre-section label
+{
+	margin-top: -25px;
+	margin-left: 5px;
+
+}
+
+.categorie-section select
+{
+	padding-right: 0px;
+}
+
 
 .champ-saisie label
 {
@@ -586,7 +618,7 @@ hr
 .champ-saisie select
 {
 	margin-top: 14px;
-	margin-bottom: 14px;
+	margin-bottom: 14px; 
 	font-size: 14px;
 	font-family: "Work Sans";
 	font-weight: 400;
@@ -613,7 +645,6 @@ hr
 {
 	width: 50%;
 	height: 36px;
-	margin: 20px 100px ;
 	border: 1px solid;
 	border-radius: 60px;
 	color: #FFF;
@@ -625,44 +656,30 @@ hr
 	align-items: center;
 	justify-content: center;
 	background-color: gray;
+	position: absolute;
+    top: 100%; 
+    left: 50%;
+    transform: translateX(-50%);
 }
 
-/** Catégorie section **/
-.categorie-section
-{
-	position: relative;
-	height: 103px;
-}
-
-.categorie-section label
-{
-	margin-left: 5px;
-}
-
-.titre-section label
-{
-	margin-top: -20px;
-	margin-left: 5px;
-}
-
-.categorie-section select
-{
-	padding-right: 0px;
-}
-
-#success-message
-{
+#success-message {
+	position: absolute;
+	width: 100%;
+    top: 93%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-family: "Work Sans";
+    font-size: 15px;
+    font-weight: 700;
+    color: black;
+    display: none;
 	text-align: center;
 	justify-content: center;
-	font-family: Syne;
-	font-size: 15px;
-	font-weight: 700;
-	color: black;
-	display: none;
-	margin-top: -5px;
 }
 
 .modal2-line
 {
-	margin-top: -40px;
+	margin-top: -20px;
+	margin-bottom: 30px;
 }
+
