--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -371,8 +371,9 @@ nav li a
 {
 	position: absolute;
 	display: flex;
-	width: 40%;
-    height: 80%;
+	width: 35%;
+	max-height: 100%;
+    height: 70vh;
 	top: 100%;
 	left: 50%;
 	border-radius: 10px;
@@ -381,13 +382,11 @@ nav li a
 	justify-content: center;
 	align-items: center;
 	background-color: #FFFFFF;
-	padding: 30px 50px ;
+	padding: 5vh;
 	box-sizing: border-box;
 	margin: auto;
 }
-.modal-container {
-    max-height: 100%;
-}
+
 
 .modal-content {
 	position: relative;
@@ -401,7 +400,7 @@ nav li a
 	line-height: 30px;
 	letter-spacing: 0em;
 	text-align: center;
-	padding: 30px;
+	padding: 10px 0 20px;
 	font-family: "Work Sans";
 	font-size: 20px;
     color: #000;
@@ -497,9 +496,12 @@ hr
 .img-loaded-container
 {
 	display: none;
-	width: 500px;
-	height: 150px;
+	width: 60vw; 
+    height: 20vh;
 	max-width: 100%;
+	align-items: center;
+	text-align: center;
+	justify-content: center;
 }
 
 .img-loaded
@@ -512,7 +514,7 @@ hr
 {
 	position: absolute;
 	top: -3%; 
-    left: -5%; 
+    left: -3%; 
 	width: 21px;
 	height: 36px;
 	color: #306685;
@@ -527,8 +529,7 @@ hr
 	line-height: 30px;
 	letter-spacing: 0em;
 	text-align: center;
-	margin: 5px;
-	padding: 5% 0;
+	padding: 2% 0 5%;
 	font-family: "Work Sans";
 	font-size: 20px;
     color: #000;
@@ -539,12 +540,12 @@ hr
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-	text-align: center;
 	justify-content: center;
 	background: #E8F1F6;
 	border-radius: 3px;
 	max-width: 100%;
-	height: 150px;
+	height: 20vh;
+	margin-bottom: -50px;
 }
 
 .image-container
@@ -565,7 +566,8 @@ hr
     background-color: #CBD6DC;
     color: #306685;
     cursor: pointer;
-    margin: -10px 15px 10px; 
+	margin: -10px 0 10px 3px;
+	padding: 0 20px;
 }
 
 .addWorkForm a
@@ -574,34 +576,26 @@ hr
 	margin-bottom: 10px;
 	font-size: 10px;
 	color: #444444;
-	margin-left: 40px;
+	margin-left: 35px;
 }
-
 
 /** Catégorie section **/
-.categorie-section
-{
-	position: relative;
-	height: auto;
-}
 
-.categorie-section label
+.champ-saisie
 {
-	margin-left: 5px;
+	height: 20vh;
 }
 
 .titre-section label
 {
 	margin-top: -25px;
-	margin-left: 5px;
-
 }
 
-.categorie-section select
+.categorie-section label, 
+.titre-section label
 {
-	padding-right: 0px;
+	margin-left: 5px;
 }
-
 
 .champ-saisie label
 {
@@ -625,15 +619,16 @@ hr
 	border: none;
 	box-shadow: 0px 4px 14px 0px rgba(0, 0, 0, 0.09);
 	color: #444444;
-	padding: 15px ;
+	padding: 15px 10px;
 }
 
 .champ-saisie input[type="text"] {
-	width: 93.4%;
+	width: 95%;
 }
 
 .champ-saisie select
 {
+	position: absolute;
 	width: 100%;
 }
 
@@ -643,43 +638,49 @@ hr
 
 #modal2 #modal2-button
 {
-	width: 50%;
-	height: 36px;
-	border: 1px solid;
-	border-radius: 60px;
-	color: #FFF;
-	font-family: Syne;
-	font-size: 13px;
-	font-weight: 700;
-	cursor: pointer;
-	text-align: center;
-	align-items: center;
-	justify-content: center;
-	background-color: gray;
-	position: absolute;
+	width: 10vw; 
+    height: 2vw; 
+    border: 0.1vw solid;
+    border-radius: 2vw; 
+    color: #FFF;
+    font-family: Syne;
+    font-size: 0.9vw; 
+    font-weight: 700;
+    cursor: pointer;
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+    background-color: gray;
+    position: absolute;
     top: 100%; 
     left: 50%;
     transform: translateX(-50%);
 }
 
 #success-message {
-	position: absolute;
-	width: 100%;
-    top: 93%; 
+    position: absolute;
+    width: 100%;
+    top: 110%; 
     left: 50%;
     transform: translate(-50%, -50%);
     font-family: "Work Sans";
-    font-size: 15px;
+    font-size: 1vw; 
     font-weight: 700;
     color: black;
     display: none;
-	text-align: center;
-	justify-content: center;
+    text-align: center;
+    justify-content: center;
 }
 
-.modal2-line
+.modal2-line 
 {
-	margin-top: -20px;
-	margin-bottom: 30px;
+	margin-top: 20px;
+	margin-bottom: 25px;
 }
+
+
+
+
+
+
 
