--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -373,7 +373,7 @@ nav li a
 	display: flex;
 	width: 35%;
 	max-height: 100%;
-    height: 70vh;
+	height: 70vh;
 	top: 100%;
 	left: 50%;
 	border-radius: 10px;
@@ -387,15 +387,16 @@ nav li a
 	margin: auto;
 }
 
-
-.modal-content {
+.modal-content
+{
 	position: relative;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
 }
 
-#modal1-title h2 {
+#modal1-title h2
+{
 	font-weight: 400;
 	line-height: 30px;
 	letter-spacing: 0em;
@@ -403,15 +404,14 @@ nav li a
 	padding: 10px 0 20px;
 	font-family: "Work Sans";
 	font-size: 20px;
-    color: #000;
+	color: #000;
 }
 
-.modal-close ,
-#modal2 .modal2-close
+.modal-close ,#modal2 .modal2-close
 {
 	position: absolute;
-	top: -3%; 
-    right: -5%; 
+	top: -3%;
+	right: -5%;
 	width: 36px;
 	height: 36px;
 	background-color: transparent;
@@ -420,9 +420,7 @@ nav li a
 	font-size: 30px;
 }
 
-.modal-close:hover, 
-.modal2-back-button:hover,
-.modal2-close:hover
+.modal-close:hover, .modal2-back-button:hover,.modal2-close:hover
 {
 	transform: scale(1.3);
 	transition: transform 0.3s ease;
@@ -479,25 +477,25 @@ hr
 	border: none;
 }
 
-#add-photo-button {
-    width: 50%;
-    max-width: 100%;
-    text-align: center;
-    border-radius: 20px;
-    background-color: #1D6154;
-    color: #FFF;
-    position: absolute;
-    left: 50%;
-    transform: translateX(-50%);
+#add-photo-button
+{
+	width: 50%;
+	max-width: 100%;
+	text-align: center;
+	border-radius: 20px;
+	background-color: #1D6154;
+	color: #FFF;
+	position: absolute;
+	left: 50%;
+	transform: translateX(-50%);
 }
 
-
 /* Modal 2*/
-.img-loaded-container 
+.img-loaded-container
 {
 	display: none;
-	width: 60vw; 
-    height: 20vh;
+	width: 60vw;
+	height: 20vh;
 	max-width: 100%;
 	align-items: center;
 	text-align: center;
@@ -513,8 +511,8 @@ hr
 #modal2 #back-to-modal1
 {
 	position: absolute;
-	top: -3%; 
-    left: -3%; 
+	top: -3%;
+	left: -3%;
 	width: 21px;
 	height: 36px;
 	color: #306685;
@@ -523,7 +521,7 @@ hr
 	cursor: pointer;
 }
 
-#modal2 #modal2-title h2 
+#modal2 #modal2-title h2
 {
 	font-weight: 400;
 	line-height: 30px;
@@ -532,9 +530,10 @@ hr
 	padding: 2% 0 5%;
 	font-family: "Work Sans";
 	font-size: 20px;
-    color: #000;
+	color: #000;
 }
 
+/** Formulaire **/
 .addWorkForm
 {
 	display: flex;
@@ -555,17 +554,18 @@ hr
 	margin-left: 40px;
 }
 
-#modal2-photo-add-button {
+#modal2-photo-add-button
+{
 	width: 100%;
-    height: 25%;
-    font-size: 14px;
-    font-weight: 550;
-    font-family: "Work Sans";
-    border: none;
-    border-radius: 50px;
-    background-color: #CBD6DC;
-    color: #306685;
-    cursor: pointer;
+	height: 25%;
+	font-size: 14px;
+	font-weight: 550;
+	font-family: "Work Sans";
+	border: none;
+	border-radius: 50px;
+	background-color: #CBD6DC;
+	color: #306685;
+	cursor: pointer;
 	margin: -10px 0 10px 3px;
 	padding: 0 20px;
 }
@@ -580,7 +580,6 @@ hr
 }
 
 /** Catégorie section **/
-
 .champ-saisie
 {
 	height: 20vh;
@@ -591,8 +590,7 @@ hr
 	margin-top: -25px;
 }
 
-.categorie-section label, 
-.titre-section label
+.categorie-section label, .titre-section label
 {
 	margin-left: 5px;
 }
@@ -608,11 +606,10 @@ hr
 	margin-top: 20px;
 }
 
-.champ-saisie input[type="text"],
-.champ-saisie select
+.champ-saisie input[type="text"],.champ-saisie select
 {
 	margin-top: 14px;
-	margin-bottom: 14px; 
+	margin-bottom: 14px;
 	font-size: 14px;
 	font-family: "Work Sans";
 	font-weight: 400;
@@ -622,7 +619,8 @@ hr
 	padding: 15px 10px;
 }
 
-.champ-saisie input[type="text"] {
+.champ-saisie input[type="text"]
+{
 	width: 95%;
 }
 
@@ -632,55 +630,52 @@ hr
 	width: 100%;
 }
 
-#modal2 #file-input {
-    display: none;
+#modal2 #file-input
+{
+	display: none;
+}
+
+.modal2-line
+{
+	margin-top: 20px;
+	margin-bottom: 25px;
+	background-color: #B3B3B3;
+	border: none;
 }
 
 #modal2 #modal2-button
 {
-	width: 10vw; 
-    height: 2vw; 
-    border: 0.1vw solid;
-    border-radius: 2vw; 
-    color: #FFF;
-    font-family: Syne;
-    font-size: 0.9vw; 
-    font-weight: 700;
-    cursor: pointer;
-    text-align: center;
-    align-items: center;
-    justify-content: center;
-    background-color: gray;
-    position: absolute;
-    top: 100%; 
-    left: 50%;
-    transform: translateX(-50%);
+	width: 10vw;
+	height: 2vw;
+	border: 0.1vw solid;
+	border-radius: 2vw;
+	color: #FFF;
+	font-family: Syne;
+	font-size: 0.9vw;
+	font-weight: 700;
+	cursor: pointer;
+	text-align: center;
+	align-items: center;
+	justify-content: center;
+	background-color: gray;
+	position: absolute;
+	top: 100%;
+	left: 50%;
+	transform: translateX(-50%);
 }
 
-#success-message {
-    position: absolute;
-    width: 100%;
-    top: 110%; 
-    left: 50%;
-    transform: translate(-50%, -50%);
-    font-family: "Work Sans";
-    font-size: 1vw; 
-    font-weight: 700;
-    color: black;
-    display: none;
-    text-align: center;
-    justify-content: center;
-}
-
-.modal2-line 
+#success-message
 {
-	margin-top: 20px;
-	margin-bottom: 25px;
+	position: absolute;
+	width: 100%;
+	top: 110%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	font-family: "Work Sans";
+	font-size: 1vw;
+	font-weight: 700;
+	color: black;
+	display: none;
+	text-align: center;
+	justify-content: center;
 }
-
-
-
-
-
-
-
